--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8080
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://localhost:3306/my_db?useUnicode=true&autoReconnect=true&characterEncoding=utf8& serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=316427 
+spring.thymeleaf.cache=false
 
+mybatis.mapper-locations=
